<resources>
    <string name="app_name">CoinFlip</string>
    <!-- MainActivity -->
    <string name="main_title">Welcome to CoinFlip!</string>
    <string name="flip_button">Flip a Restaurant</string> <!-- referenced in FilterActivity also -->
    <string name="connect_gplay">Connect with Google Play</string>
    <string name="filter_options">Filtering Options</string> <!-- referenced in FilterActivity also -->
    <!-- FilterActivity -->
    <string-array name="filter_array_price">
        <item>$</item>
        <item>$$</item>
        <item>$$$</item>
        <item>$$$$</item>
    </string-array>
    <string name="filter_open">Open Now</string>
    <string name="filter_deals">Deals/Promotions Available</string>
    <string name="filter_distance_hint">Distance (miles)</string>
    <!-- FlippedActivity -->
    <string name="flipped_title">Restaurant Flipped</string>
    <string name="flipped_glance">At A Glance:</string>
    <string name="flipped_visit_count">Visit Count: </string>
    <string name="flipped_last_visit">Last Visit: </string>
    <string name="flipped_your_rating">Your rating: </string>
    <string name="flipped_coin_rating">CoinFlip Rating: </string>
    <string name="flipped_favorited"> CoinFlippers have favorited this location.</string>
    <string name="flipped_price_range">Price Range - </string>
    <!-- Temp Display Activity -->
    <string name="price_label">Maximum Price: </string>
    <string name="open_label">Open Now: </string>
    <string name="deals_label">Deals Available: </string>
    <string name="distance_label">Maximum Distance: </string>



</resources>
