<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cs329e.coinflip.FilterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/filter_options"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerPrice"
        android:layout_below="@+id/textView2"
        android:layout_toEndOf="@+id/switchPrice" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchPrice"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:checked="false" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchOpen"
        android:layout_below="@+id/spinnerPrice"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/filter_open"
        android:id="@+id/textOpen"
        android:layout_below="@+id/spinnerPrice"
        android:layout_toEndOf="@+id/switchOpen"
        android:paddingLeft="15dp" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchDeals"
        android:layout_below="@+id/switchOpen"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/filter_deals"
        android:id="@+id/textDeals"
        android:paddingLeft="15dp"
        android:layout_alignBaseline="@+id/switchDeals"
        android:layout_alignBottom="@+id/switchDeals"
        android:layout_toEndOf="@+id/switchDeals" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchDistance"
        android:layout_below="@+id/switchDeals"
        android:layout_alignParentStart="true"
        android:checked="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editDistance"
        android:layout_below="@+id/switchDeals"
        android:layout_toEndOf="@+id/switchDistance"
        android:hint="@string/filter_distance_hint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flip_button"
        android:id="@+id/buttonFlip"
        android:layout_marginBottom="33dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchRating"
        android:checked="false"
        android:layout_below="@+id/editDistance"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerRating"
        android:layout_alignTop="@+id/switchRating"
        android:layout_toEndOf="@+id/switchRating"
        android:spinnerMode="dialog" />

</RelativeLayout>
